<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coachme.coachmeforadmin.activities.admin.AdminActivity">

    <Button
        android:id="@+id/addUserButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttonshape"
        android:text="@string/adduser_button_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/usersListButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/addUserButton"
        android:layout_alignStart="@+id/addUserButton"
        android:layout_below="@+id/addUserButton"
        android:background="@drawable/buttonshape"
        android:text="@string/userslist_button_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/addMachineButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/buttonshape"
        android:text="@string/addmachine_button_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/machinesListButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/addUserButton"
        android:layout_alignStart="@+id/addUserButton"
        android:layout_below="@+id/addUserButton"
        android:background="@drawable/buttonshape"
        android:text="@string/machineslist_button_text"
        android:textColor="#FFFFFF" />
</LinearLayout>
