<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formulaire_ajout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coachme.coachmeforadmin.activities.admin.users.AddUserActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_button_text" />

    <Button
        android:id="@+id/addUserGoBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/submitButton"
        android:text="@string/goback_button_text" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nameEditText"
        android:layout_below="@+id/nameEditText"
        android:layout_marginTop="122dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/goalSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/goalTextView"
        android:layout_marginTop="19dp"
        android:entries="@array/goals_array"
        style="@style/Widget.AppCompat.Spinner" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/name_text_view_text" />

    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/firstNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/firstname_text_view_text" />

    <TextView
        android:id="@+id/goalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addUserGoBackButton"
        android:layout_alignStart="@+id/firstNameTextView"
        android:layout_marginBottom="108dp"
        android:text="@string/goal_text_view_text" />

</RelativeLayout>
