<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formulaire_ajout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coachme.coachmeforadmin.activities.admin.users.UpdateUserActivity">

    <TextView
        android:id="@+id/updateUserNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/name_text_view_text"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/updateUserNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/updateUserFirstNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/updateUserFirstNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/firstname_text_view_text"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/updateUserFirstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/updateUserNameEditText"
        android:layout_below="@+id/updateUserNameEditText"
        android:layout_marginTop="122dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/updateUserGoalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/updateUserGoBackButton"
        android:layout_alignStart="@+id/updateUserFirstNameTextView"
        android:layout_marginBottom="108dp"
        android:text="@string/goal_text_view_text"
        android:textColor="#FFFFFF" />

    <Spinner
        android:id="@+id/updateUserGoalSpinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/updateUserGoalTextView"
        android:layout_marginTop="19dp"
        android:entries="@array/goals_array" />

    <Button
        android:id="@+id/updateUserSubmitButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttonshape"
        android:text="@string/updatesubmit_button_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/updateUserGoBackButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/updateUserSubmitButton"
        android:background="@drawable/buttonshape"
        android:text="@string/goback_button_text"
        android:textColor="#FFFFFF" />

</RelativeLayout>
