<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_machine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coachme.coachmeforadmin.activities.admin.machines.AddMachineActivity">

    <TextView
        android:id="@+id/machineNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/machinename_text_view_text"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/machineNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/addMachineSubmitButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttonshape"
        android:text="@string/submit_button_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/addMachineGoBackButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/addMachineSubmitButton"
        android:background="@drawable/buttonshape"
        android:text="@string/goback_button_text"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/machineTypesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/machineNameTextView"
        android:layout_below="@+id/machineNameEditText"
        android:layout_marginTop="87dp"
        android:text="@string/machinetypes_textview_text"
        android:textColor="#FFFFFF" />

    <Spinner
        android:id="@+id/machineTypesSpinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/machineTypesTextView"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:entries="@array/machinetypes_array" />
</RelativeLayout>
